# Yuzhou-IDS721-Proj2

./: Makefile  README.md
.devcontainer/: devcontainer.json
actix-translator/: Cargo.toml  Dockerfile  Makefile  README.md
actix-translator/src/: lib.rs  main.rs  test.rs
actix-translator/templates/: success.html.tera
forms/: Cargo.toml
forms/src/: lib.rs  main.rs
forms/templates/: index.html.tera  success.html.tera
hello-rocket/: index.html
rocket-translator/: Dockerfile  README.md
