[package]
name = "rust-bert-rocket"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { path = "rocket-v0.5rc/core/lib"}
rust-bert = "0.20.0"
anyhow = "1.0.40"
exitfailure = "0.5.1"
tch = "0.10.1"
serde = {version = "1.0", features = ["derive"]}

[dependencies.rocket_dyn_templates]
path = "rocket-v0.5rc/contrib/dyn_templates"
features = ["tera"]
